Auto-merge Dependabot patches

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,12 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    groups:
+      minor-version-updates:
+        applies-to: version-updates
+        update-types:
+          - "minor"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
