--- a/PCAxis.Metadata.UnitTest/PCAxis.Metadata.UnitTest.csproj
+++ b/PCAxis.Metadata.UnitTest/PCAxis.Metadata.UnitTest.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="metadata.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="metadata.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.7.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.7.3" />
@@ -14,6 +24,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCAxis.Metadata\PCAxis.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
